--- a/index.html
+++ b/index.html
@@ -255,6 +255,21 @@
   }
 }
 
+.center-tooltip {
+  position: absolute;
+  background-color: black;
+  color: white;
+  font-size: 14px;
+  padding: 6px 10px;
+  border-radius: 5px;
+  white-space: nowrap;
+  pointer-events: none; /* Prevents interference */
+  opacity: 0.9;
+  display: none; /* Initially hidden */
+  z-index: 9999; /* Ensure it stays above everything */
+}
+
+
 
 
 
