--- a/portfolio_page/video-portfolio.html
+++ b/portfolio_page/video-portfolio.html
@@ -108,7 +108,7 @@
   position: relative;
   width: 100vw;
   white-space: nowrap;
-    overflow: visible !important; /* Ensure elements are not clipped */
+    /* overflow: visible !important; Ensure elements are not clipped */
 
 }
 
@@ -507,6 +507,7 @@
 
 /* ❌ Close Button - Keep it in place */
 .close-btn {
+  display: none; /* Ensure it's hidden initially */
   position: absolute;
   top: -20px;
   right: -20px;
@@ -530,26 +531,68 @@
   color: white;
 }
 
-/* 📺 Background behind TV (but not the whole screen) */
+/* 🎥 Video Popup Background */
+.video-popup {
+  display: none; /* Ensure it's hidden initially */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8); /* Dark transparent overlay */
+  z-index: 10000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* 📺 Background behind TV */
 .tv-background {
+  display: none; /* Hide initially */
   position: absolute;
   top: 50%;
   left: 55%;
-  width: 45%; /* Slightly larger than TV */
+  width: 45%;
   height: 45%;
   background: black;
   transform: translate(-55%, -50%);
-  z-index: 1; /* Below TV */
-  border-radius: 20px; /* Rounded corners for a sleek look */
+  z-index: 1;
+  border-radius: 20px;
 }
 
-/* 🌐 "View on YouTube" Link */
+/* 📺 TV Frame */
+.tv-frame {
+  display: none; /* Hide initially */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1000px;
+  height: 700px;
+  z-index: 2;
+  pointer-events: none;
+}
+
+/* 📹 Embedded YouTube Video */
+.popup-video {
+  display: none; /* Hide initially */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 35%;
+  height: 35%;
+  transform: translate(-55%, -55%);
+  border: none;
+  z-index: 1;
+}
+
+/* 🌐 View on YouTube Link */
 .youtube-link {
+  display: none; /* Hide initially */
   position: absolute;
   bottom: -50px;
   left: 50%;
   transform: translateX(-50%);
-
   font-size: 20px;
   font-weight: bold;
   color: white;
@@ -558,13 +601,12 @@
   text-decoration: none;
   border-radius: 5px;
   transition: background 0.3s ease-in-out;
-  z-index: 2; /* Above TV background */
+  z-index: 2;
 }
 
 .youtube-link:hover {
   background: red;
 }
-
 
 
 
@@ -769,16 +811,23 @@
 
 
 
-  <script>
-document.addEventListener("DOMContentLoaded", function () {
-  // 🎥 Get all video links
-  const videoThumbnails = document.querySelectorAll(".video-thumbnail");
-
-  // 🎬 Get popup elements
+  <script>document.addEventListener("DOMContentLoaded", function () {
+  // 🎥 Get popup elements
   const videoPopup = document.getElementById("videoPopup");
   const videoFrame = document.getElementById("videoFrame");
   const youtubeLink = document.getElementById("youtubeLink");
-  const closeButton = document.querySelector(".close-btn");
+  const tvFrame = document.querySelector(".tv-frame");
+  const tvBackground = document.querySelector(".tv-background");
+
+  // ❌ Hide all elements when the page loads
+  videoPopup.style.display = "none";
+  videoFrame.style.display = "none";
+  youtubeLink.style.display = "none";
+  tvFrame.style.display = "none";
+  tvBackground.style.display = "none";
+
+  // 🎬 Get all video links
+  const videoThumbnails = document.querySelectorAll(".video-thumbnail");
 
   // 🖱️ Open Popup on Click
   videoThumbnails.forEach(thumbnail => {
@@ -810,19 +859,27 @@ document.addEventListener("DOMContentLoaded", function () {
       // ✅ Update "View on YouTube" link
       youtubeLink.href = `https://www.youtube.com/watch?v=${videoID}`;
 
-      // ✅ Show popup
+      // ✅ Show popup elements
       videoPopup.style.display = "flex";
+      videoFrame.style.display = "block";
+      youtubeLink.style.display = "block";
+      tvFrame.style.display = "block";
+      tvBackground.style.display = "block";
     });
   });
 
   // ❌ Close Popup
   function closePopup() {
     videoPopup.style.display = "none";
+    videoFrame.style.display = "none";
+    youtubeLink.style.display = "none";
+    tvFrame.style.display = "none";
+    tvBackground.style.display = "none";
     videoFrame.src = ""; // Stop video playback
   }
 
   // 🖱️ Ensure Close Button Works
-  closeButton.addEventListener("click", closePopup);
+  document.querySelector(".close-btn").addEventListener("click", closePopup);
 
   // 🖱️ Close popup when clicking outside the video area
   videoPopup.addEventListener("click", function(event) {
@@ -831,8 +888,6 @@ document.addEventListener("DOMContentLoaded", function () {
     }
   });
 });
-
-
 
   </script>
 
