--- a/portfolio_page/video-portfolio.html
+++ b/portfolio_page/video-portfolio.html
@@ -564,11 +564,11 @@
 .tv-frame {
   display: none; /* Hide initially */
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 76%;
+  left: 40%;
   transform: translate(-50%, -50%);
-  width: 1000px;
-  height: 700px;
+  width: 900px;
+  height: 850px;
   z-index: 2;
   pointer-events: none;
 }
@@ -645,7 +645,7 @@
     <!-- Videos Section Header -->
   <div class="page-header">
     <h2>Videos</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget odio ac eros varius viverra. Praesent suscipit tincidunt felis, vel fermentum arcu dictum sed.</p>
+    <p>A mix of storytelling, experimentation, and a touch of nostalgia. From my annual Valentine’s Day videos—a cherished tradition—to the remnants of my semi-chaotic YouTube phase, this collection reflects my evolving creative journey. Whether heartfelt, humorous, or totally unhinged, each video captures my passion for storytelling and visual play. Enjoy the ride!</p>
   </div>
 
 
