--- a/AboutMe/aboutme.html
+++ b/AboutMe/aboutme.html
@@ -115,7 +115,7 @@
 
     /* About Me Image */
     .aboutme-image {
-      width: 60%;
+      width: 30%;
       max-width: 800px;
       height: auto;
       box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
@@ -209,10 +209,10 @@
   <!-- About Me Section -->
   <div class="aboutme-container">
     <div class="aboutme-header">About Me</div>
-    <img src="AboutMe.heic" alt="About Me Image" class="aboutme-image">
+    <img src="AboutMe.jpg" alt="About Me Image" class="aboutme-image">
     <p class="aboutme-text">
       Hi, I’m Aria, a multidisciplinary artist and Tufts University graduate with a passion for storytelling and creative expression. Whether through digital collages, babkas, or video valentines, I aim to bring smiles to people in creative, meaningful ways. My work is shaped by my background, experiences, and an ever-growing curiosity to explore new mediums.
-Creating is deeply fulfilling, but I also have to pay the bills. In addition to my artistic pursuits, I work as a Pilates trainer and a server (aka adult babysitter) at a bar—two jobs I enjoy because I love interacting with people and fostering new connections. I believe in spreading joy, sparking change, and being real. 
+Creating is deeply fulfilling, but I also have to pay the bills. <br><br>In addition to my artistic pursuits, I work as a Pilates trainer and a server (aka adult babysitter) at a bar—two jobs I enjoy because I love interacting with people and fostering new connections. I believe in spreading joy, sparking change, and being real. 
 
     </p>
   </div>
