Change to video, remove dates and change links

--- a/portfolio_page/video-portfolio.html
+++ b/portfolio_page/video-portfolio.html
@@ -658,17 +658,15 @@
       <!-- Example Items -->
       <div class="timeline-item above">
         <div class="timeline-dot"></div> <!-- Now correctly aligned -->
-        <a href="https://www.youtube.com/embed/9Bs_yZx9n_Y?si=5AwMKlzn3WWEbdcU" target="_blank">
+        <a href="https://www.youtube.com/embed/4jlWrXwFrQg?si=8AnjkqeV4ZIFE7fS" target="_blank">
           <div class="video-thumbnail">
             <img src="Video/1.png" alt="Video 1">
           </div>
         </a>
-        <div class="date">March 2024</div>
       </div>
 
       <div class="timeline-item below">
         <div class="timeline-dot"></div>
-        <div class="date">February 2024</div>
         <a href="https://www.youtube.com/embed/IbDDsPNAHdY?si=rdMlLBUIvrjIThq9" target="_blank">
           <div class="video-thumbnail">
             <img src="Video/2.png" alt="Video 2">
@@ -684,7 +682,6 @@
             <img src="Video/3.jpg" alt="Video 3">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item below">
@@ -694,7 +691,6 @@
             <img src="Video/4.jpg" alt="Video 4">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item above">
@@ -704,7 +700,6 @@
             <img src="Video/5.jpg" alt="Video 5">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item below">
@@ -714,7 +709,6 @@
             <img src="Video/6.jpg" alt="Video 6">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item above">
@@ -724,7 +718,6 @@
             <img src="Video/7.jpg" alt="Video 7">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item below">
@@ -734,7 +727,6 @@
             <img src="Video/8.jpg" alt="Video 8">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       
@@ -746,7 +738,6 @@
             <img src="Video/9.jpg" alt="Video 9">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item below">
@@ -756,7 +747,6 @@
             <img src="Video/10.jpg" alt="Video 10">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item above">
@@ -766,7 +756,6 @@
             <img src="Video/11.jpg" alt="Video 11">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item below">
@@ -776,7 +765,6 @@
             <img src="Video/12.jpg" alt="Video 12">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item above">
@@ -786,7 +774,6 @@
             <img src="Video/13.jpg" alt="Video 13">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item below">
@@ -796,7 +783,6 @@
             <img src="Video/14.jpg" alt="Video 14">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
       <div class="timeline-item above">
         <div class="timeline-dot"></div>
@@ -805,7 +791,6 @@
             <img src="Video/15.png" alt="Video 15">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item below">
@@ -815,7 +800,6 @@
             <img src="Video/16.png" alt="Video 16">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
       <div class="timeline-item above">
         <div class="timeline-dot"></div>
@@ -824,7 +808,6 @@
             <img src="Video/17.png" alt="Video 17">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item below">
@@ -834,7 +817,6 @@
             <img src="Video/18.png" alt="Video 18">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item above">
@@ -844,7 +826,6 @@
             <img src="Video/19.png" alt="Video 19">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-item below">
@@ -854,7 +835,6 @@
             <img src="Video/20.png" alt="Video 20">
           </div>
         </a>
-        <div class="date">January 2024</div>
       </div>
 
       <div class="timeline-end">End</div>
