--- a/custom_page/custom.html
+++ b/custom_page/custom.html
@@ -451,6 +451,46 @@
 .timeline-container::-webkit-scrollbar-thumb:hover {
   background: #333; /* Darker thumb on hover */
 }
+
+.modal {
+  display: none; /* Ensure modal starts hidden */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* 🔹 Enlarged Image */
+.modal-content {
+  max-width: 90%;
+  max-height: 90%;
+  /* border-radius: 10px; */
+  /* box-shadow: 0 4px 10px rgba(255, 255, 255, 0.5); */
+}
+
+/* 🔹 Close Button */
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover {
+  color: red;
+}
+
+
+
   </style>
 </head>
 <body>
@@ -511,6 +551,13 @@
 
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
 
+  <!-- Modal for Enlarged Image -->
+<div id="imageModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="modalImage">
+</div>
+
+
   
 
 
@@ -519,6 +566,10 @@
 document.addEventListener("DOMContentLoaded", () => {
   const timeline = document.querySelector(".timeline");
   const numImages = 43;
+
+  const modal = document.getElementById("imageModal");
+  const modalImage = document.getElementById("modalImage");
+  const closeButton = document.querySelector(".close");
 
   for (let i = 1; i <= numImages; i++) {
     const timelineItem = document.createElement("div");
@@ -529,7 +580,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
     const img = document.createElement("img");
 
-    // Try different image extensions in order
+    // Try different image formats
     const imgFormats = [`Custom/${i}.png`, `Custom/${i}.jpg`, `Custom/${i}.heic`, `Custom/${i}.jpeg`];
     let formatIndex = 0;
 
@@ -538,7 +589,7 @@ document.addEventListener("DOMContentLoaded", () => {
         img.src = imgFormats[formatIndex];
         img.onerror = () => {
           formatIndex++;
-          loadNextFormat(); // Try the next format
+          loadNextFormat();
         };
       }
     }
@@ -547,12 +598,33 @@ document.addEventListener("DOMContentLoaded", () => {
 
     img.alt = `Image ${i}`;
 
-    // Append elements in order: dot first, then image
+    // ✅ Add event listener to show the modal when clicked
+    img.addEventListener("click", function () {
+      modal.style.display = "flex"; // Show modal
+      modalImage.src = this.src; // Set clicked image in modal
+    });
+
     timelineItem.appendChild(dot);
     timelineItem.appendChild(img);
     timeline.insertBefore(timelineItem, document.querySelector(".timeline-end"));
   }
+
+  // ✅ Close modal when clicking the "X"
+  closeButton.addEventListener("click", function () {
+    modal.style.display = "none";
+  });
+
+  // ✅ Close modal when clicking outside the image
+  modal.addEventListener("click", function (event) {
+    if (event.target === modal) {
+      modal.style.display = "none";
+    }
+  });
+
+  // Ensure modal is hidden when the page loads
+  modal.style.display = "none";
 });
+
 
 
   </script>
