--- a/freelance_page/freelance.html
+++ b/freelance_page/freelance.html
@@ -458,6 +458,42 @@
 }
 
 
+.modal {
+  display: none; /* Ensure modal starts hidden */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* 🔹 Enlarged Image */
+.modal-content {
+  max-width: 90%;
+  max-height: 90%;
+  /* border-radius: 10px; */
+  /* box-shadow: 0 4px 10px rgba(255, 255, 255, 0.5); */
+}
+
+/* 🔹 Close Button */
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover {
+  color: red;
+}
 
   </style>
 </head>
@@ -520,6 +556,10 @@
 
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
 
+  <div id="imageModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="modalImage">
+  </div>
   
 
 
@@ -528,6 +568,10 @@
 document.addEventListener("DOMContentLoaded", () => {
   const timeline = document.querySelector(".timeline");
   const numImages = 15;
+
+  const modal = document.getElementById("imageModal");
+  const modalImage = document.getElementById("modalImage");
+  const closeButton = document.querySelector(".close");
 
   for (let i = 1; i <= numImages; i++) {
     const timelineItem = document.createElement("div");
@@ -538,7 +582,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
     const img = document.createElement("img");
 
-    // Try different image extensions in order
+    // Try different image formats in order
     const imgFormats = [`Freelance/${i}.png`, `Freelance/${i}.jpg`, `Freelance/${i}.heic`, `Freelance/${i}.jpeg`];
     let formatIndex = 0;
 
@@ -556,11 +600,31 @@ document.addEventListener("DOMContentLoaded", () => {
 
     img.alt = `Image ${i}`;
 
-    // Append elements in order: dot first, then image
+    // ✅ Add event listener to enlarge image when clicked
+    img.addEventListener("click", function () {
+      modal.style.display = "flex"; // Show modal
+      modalImage.src = this.src; // Set clicked image in modal
+    });
+
     timelineItem.appendChild(dot);
     timelineItem.appendChild(img);
     timeline.insertBefore(timelineItem, document.querySelector(".timeline-end"));
   }
+
+  // ✅ Close modal when clicking the "X"
+  closeButton.addEventListener("click", function () {
+    modal.style.display = "none";
+  });
+
+  // ✅ Close modal when clicking outside the image
+  modal.addEventListener("click", function (event) {
+    if (event.target === modal) {
+      modal.style.display = "none";
+    }
+  });
+
+  // Ensure modal is hidden when the page loads
+  modal.style.display = "none";
 });
 
 
