--- a/portfolio_page/video-portfolio.html
+++ b/portfolio_page/video-portfolio.html
@@ -821,7 +821,7 @@
 
       <div class="timeline-item above">
         <div class="timeline-dot"></div>
-        <a href="https://www.youtube.com/embed/4jlWrXwFrQg?si=LbEGDOCnlCpwD2RI" target="_blank">
+        <a href="https://youtube.com/shorts/c7vj18dJpx4?feature=shared" target="_blank">
           <div class="video-thumbnail">
             <img src="Video/19.png" alt="Video 19">
           </div>
@@ -905,6 +905,12 @@
         videoID = videoURL.split("/embed/")[1].split("?")[0];
       } else {
         console.error("Invalid YouTube URL:", videoURL);
+        youtubeLink.href = "https://youtube.com/shorts/c7vj18dJpx4?feature=shared";
+        videoPopup.style.display = "flex";
+        videoFrame.style.display = "block";
+        youtubeLink.style.display = "block";
+        tvFrame.style.display = "block";
+        tvBackground.style.display = "block";
         return;
       }
 
