--- a/digital_art_page/digital_art.html
+++ b/digital_art_page/digital_art.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Portfolio</title>
+  <title>Digital Art!</title>
   <style>
     /* Import Custom Font */
     @font-face {
