Attempted icon in tab:

--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@ canvas {
 <div id="center-tooltip" class="tooltip">Spin Me</div>
 
 
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+<link rel="icon" type="image/png" href="images/favicon.png">
 
 <script src="spinner.js"></script>
 
